--- a/style.css
+++ b/style.css
@@ -2,27 +2,108 @@
     --primary-color: #F5B79E; 
     --secondary-color: #A6C6D5;
     --third-color: #F7F7F9;
+    --fourth-color: #007796;
 }
 body {
     margin: 0;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
-.main { /*first section with content*/
+
+
+ /*first section with content*/
+.main {
     width: 1920px;
     height: 1080px;
     background-image: url(/images/bg.jpg);
     background-size: cover;
 }
-.main2 { /*second section with content*/
+.mainLogo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    padding-top: 50px;
+}
+.mainButton{
+    display: inline-block;
+    cursor: pointer;
+    padding: 2rem 5.5rem;
+    border-radius: 8px;
+    background-color: var(--secondary-color);
+    margin-left: 800px;
+    margin-top: 100px;
+    font-size: 30px;
+}
+.mainButton a{
+    text-decoration: none;
+    color: white;
+}
+ /*first section with content*/
+
+
+
+ /*second section with content*/
+ .main2 { 
     width: 1920px;
     height: 1080px;
     background-color: var(--primary-color);
+    display: flex;
 }
-.main3 { /*third section with content*/
+.main2, a, p {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+}
+.main2Home{
+    font-size: 20px; 
+}
+.main2, h1{
+    font-size: 60px;
+}
+.main2Header{
+    color: white;
+}
+.main2Img {
+    width: 960px;
+    height: 1080px;
+}
+.main2Container{
+    margin-left: 25px;
+    margin-right: 25px;
+}
+.main2Home{
+    color: black;
+    text-decoration: none;
+}
+.main2Mail{
+    color: var(--fourth-color);
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 40px;
+}
+/*second section with content*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*third section with content*/
+.main3 { 
     width: 1920px;
     height: 1080px;
     background-color: var(--secondary-color);
 }
+
+/*third section with content*/
 .main4 {
     width: 1920px;
     height: 1080px;
@@ -33,4 +114,3 @@ body {
     height: 1080px;
     background-color: var(--primary-color);
 }
-
