--- a/style.css
+++ b/style.css
@@ -21,20 +21,28 @@ body {
 }
 .mainLogo {
     display: block;
-    margin-left: auto;
+    margin-left: 725px;
     margin-right: auto;
     width: 50%;
-    padding-top: 50px;
+    padding-top: 100px;
+}
+.main h1{
+    color: white;
+    text-align: center;
+    font-size: 120px;
 }
 .mainButton{
     display: inline-block;
     cursor: pointer;
     padding: 2rem 5.5rem;
-    border-radius: 8px;
+    border-radius: 6px;
     background-color: var(--secondary-color);
     margin-left: 800px;
-    margin-top: 100px;
     font-size: 30px;
+}
+.mainButton:hover{
+    transform: scale(1.02);
+    opacity: 0.9;
 }
 .mainButton a{
     text-decoration: none;
