made it to work one.com

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .main {
     width: 1920px;
     height: 1080px;
-    background-image: url(/images/bg.jpg);
+    background-image: url(images/bg.jpg);
     background-size: cover;
 }
 .mainLogo {
